# earnings-call-synthesis

./: .gitignore  README.md  TESTING.md  endpoint_docs.txt  fetch_transcript.py  pyproject.toml  pytest.ini  requirements.txt  test_manual.py
.github/workflows/: earnings-call-aapl.yml  main-pipeline.yml  test-upst-pipeline.yml
config/: tickers.yml
scripts/: main_pipeline.py  run_upst_integration_test.py  send_latest_aapl.py
src/earnings_call/: __init__.py  earnings_calendar.py  emailer.py  env.py  pipeline.py  summarizer.py  transcripts.py
summary_staging/: UPST_2025-11-05_transcript_summary_response.txt
tests/: test_env.py  test_manual.py  test_transcripts_filtering.py  test_upst_pipeline.py
transcripts/: AAPL_2025-10-30_transcript.txt  UPST_2025-11-05_transcript.txt
